perf/modules/test-picker-sk/test-picker-sk.scss
@import '../themes/themes.scss';

.body-sk test-picker-sk {
  spinner-sk {
    width: 2px;
    height: 2px;
  }

  #testPicker,
  #fieldContainer {
    display: flex;
    align-items: flex-start;
    gap: 8px;
  }

  #fieldContainer {
    display: flex;
    align-items: flex-start;
    flex-wrap: wrap;
  }

  #max-message {
    color: var(--error);
    font-style: italic;
  }

  #queryCount {
    display: flex;
    flex-direction: column;
    align-items: center;

    .test-picker-sk-matches-container {
      display: flex;
      flex-direction: row;
      align-self: center;
      min-width: 75px;
      spinner-sk {
        margin: 0;
        margin-left: 8px;
        margin-top: 2px;
      }
    }
    button {
      z-index: 1;
      margin-bottom: 0;
      white-space: nowrap;
    }
  }
}

